--- a/components/MomTipCard/MomTipCard.module.css
+++ b/components/MomTipCard/MomTipCard.module.css
@@ -25,3 +25,9 @@
     line-height: 160%;
     color: var(--color-neutral-darkest);
 }
+
+@media (min-width: 1440px) {
+    .tip {
+        font-size: 16px;
+    }
+}
